--- a/ansible/roles/app/templates/production.env.j2
+++ b/ansible/roles/app/templates/production.env.j2
@@ -11,6 +11,7 @@ BUDGET_CRON_IMAGE={{ piggypulse_cron_image }}
 POSTGRES_DB={{ piggypulse_db_name }}
 POSTGRES_USER={{ piggypulse_db_user }}
 POSTGRES_PASSWORD={{ vault_piggypulse_postgres_password }}
+POSTGRES_PASSWORD_URLENC={{ vault_piggypulse_postgres_password | urlencode }}
 BUDGET_DATABASE_MAX_CONNECTIONS={{ piggypulse_db_max_connections }}
 BUDGET_DATABASE_MIN_CONNECTIONS={{ piggypulse_db_min_connections }}
 BUDGET_DATABASE_CONNECTION_TIMEOUT={{ piggypulse_db_connection_timeout }}
@@ -18,6 +19,7 @@ BUDGET_DATABASE_ACQUIRE_TIMEOUT={{ piggypulse_db_acquire_timeout }}
 
 # Redis
 REDIS_PASSWORD={{ vault_piggypulse_redis_password }}
+REDIS_PASSWORD_URLENC={{ vault_piggypulse_redis_password | urlencode }}
 
 # API security
 ROCKET_SECRET_KEY={{ vault_piggypulse_rocket_secret_key }}
