--- a/ansible/roles/app/templates/piggypulse-stack.service.j2
+++ b/ansible/roles/app/templates/piggypulse-stack.service.j2
@@ -7,9 +7,10 @@ After=network-online.target docker.service
 Type=oneshot
 RemainAfterExit=yes
 WorkingDirectory={{ piggypulse_compose_dir }}
-ExecStartPre={{ piggypulse_compose_bin }}{% if piggypulse_compose_subcommand %} {{ piggypulse_compose_subcommand }}{% endif %} pull
-ExecStart={{ piggypulse_compose_bin }}{% if piggypulse_compose_subcommand %} {{ piggypulse_compose_subcommand }}{% endif %} up -d --remove-orphans
-ExecStop={{ piggypulse_compose_bin }}{% if piggypulse_compose_subcommand %} {{ piggypulse_compose_subcommand }}{% endif %} down
+ExecStartPre=-{{ piggypulse_compose_bin }}{% if piggypulse_compose_subcommand %} {{ piggypulse_compose_subcommand }}{% endif %} --env-file {{ piggypulse_env_path }} down --remove-orphans
+ExecStartPre={{ piggypulse_compose_bin }}{% if piggypulse_compose_subcommand %} {{ piggypulse_compose_subcommand }}{% endif %} --env-file {{ piggypulse_env_path }} pull
+ExecStart={{ piggypulse_compose_bin }}{% if piggypulse_compose_subcommand %} {{ piggypulse_compose_subcommand }}{% endif %} --env-file {{ piggypulse_env_path }} up -d --remove-orphans
+ExecStop={{ piggypulse_compose_bin }}{% if piggypulse_compose_subcommand %} {{ piggypulse_compose_subcommand }}{% endif %} --env-file {{ piggypulse_env_path }} down
 TimeoutStartSec=0
 
 [Install]
