--- a/ansible/roles/app/templates/production.env.j2
+++ b/ansible/roles/app/templates/production.env.j2
@@ -6,6 +6,7 @@ CADDY_ACME_EMAIL={{ vault_piggypulse_caddy_acme_email | default('security@piggy-
 CADDY_LOG_LEVEL={{ piggypulse_caddy_log_level }}
 BUDGET_API_IMAGE={{ piggypulse_api_image }}
 BUDGET_CRON_IMAGE={{ piggypulse_cron_image }}
+BUDGET_IMAGE_PLATFORM={{ piggypulse_budget_image_platform | default('linux/amd64') }}
 
 # Database
 POSTGRES_DB={{ piggypulse_db_name }}
